--- a/configuration.yaml
+++ b/configuration.yaml
@@ -7,6 +7,8 @@ default_config:
 python_script:
 
 logger: !include logger.yaml
+logbook: !include logbook.yaml
+history: !include history.yaml
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
@@ -94,6 +96,8 @@ recorder:
   purge_keep_days: 7
   commit_interval: 60
   include:
+    domains:
+      - automation
     entities:
       - sensor.sht31_temperature
       - sensor.sht31_humidity
@@ -102,6 +106,7 @@ recorder:
       - sensor.siemens_ag
       - sensor.eur_czk
       - sensor.btc_exchange_rate
+      - sensor.eth_exchange_rate
     entity_globs:
       - person.*
       - light.*
@@ -114,7 +119,6 @@ influxdb:
       - sensor.mh_z19_co2
       - sensor.sht31_temperature
       - sensor.sht31_humidity
-      - sensor.mh_z19_co2
 
 webostv:
   host: !secret ip_tv
