--- a/scripts.yaml
+++ b/scripts.yaml
@@ -86,3 +86,39 @@ vacuum_start:
     target:
       device_id: e757ad2f61e7b2481370dc6c29516619
   mode: single
+start_surveila:
+  alias: Start Surveillance
+  sequence:
+  - delay:
+      hours: 0
+      minutes: 2
+      seconds: 30
+      milliseconds: 0
+  - service: switch.turn_on
+    target:
+      entity_id:
+      - switch.reolink520a_ftp
+      - switch.reolink520a_ir_lights
+  - delay:
+      hours: 0
+      minutes: 2
+      seconds: 30
+      milliseconds: 0
+  - service: automation.turn_on
+    target:
+      entity_id: automation.6_security_camera_snapshot
+  mode: restart
+  icon: mdi:cctv
+stop_surveillance:
+  alias: Stop Surveillance
+  sequence:
+  - service: automation.turn_off
+    target:
+      entity_id: automation.6_security_camera_snapshot
+  - service: switch.turn_off
+    target:
+      entity_id:
+      - switch.reolink520a_ftp
+      - switch.reolink520a_ir_lights
+  mode: single
+  icon: mdi:cctv-off
